# limbo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: c-cpp.yml  cmake.yml
.script/: hello_world
include/argparse/: argparse.hpp
include/interpreter/: interpreter.hpp
include/interpreter/error/: interpreter_error.hpp
include/interpreter/logic/: any.hpp  boollib.hpp  stdlib.hpp
include/interpreter/visitor/: expression_visitor.hpp  interpreter.hpp
include/lexer/: lexer.hpp  lexer_error.hpp  token.hpp  token_constants.hpp
include/lexer/error/: lexer_error.hpp
include/parser/: parser_error.hpp  syntax_tree.hpp
include/parser/error/: parser_error.hpp
include/parser/expression/: assign_expression.hpp  call_expression.hpp  expression.hpp  unary_expression.hpp
include/parser/expression/binary/: arithmetic_expression.hpp  binary_expression.hpp  compare_expression.hpp  equality_expression.hpp
include/parser/expression/literal/: any.hpp  bool.hpp  boolean.hpp  identifier.hpp  integer.hpp  literal.hpp  variant.hpp
include/parser/expression/unary/: unary_expression.hpp
include/scanner/: scanner.hpp
include/scanner/error/: scanner_error.hpp
include/storage/: runtime_environment.hpp
include/utils/: error.hpp  io_stream.hpp  string_utils.hpp
src/: main.cpp
src/argparse/: argparse.cpp
src/interpreter/: interpreter.cpp
src/interpreter/error/: interpreter_error.cpp
src/interpreter/logic/: boolean.cpp  stdlib.cpp
src/interpreter/visitor/: interpreter.cpp
src/lexer/: lexer.cpp  lexer_error.cpp  token.cpp
src/lexer/error/: lexer_error.cpp
src/parser/: parser_error.cpp  syntax_tree.cpp
src/parser/error/: parser_error.cpp
src/parser/expression/: assign_expression.cpp  call_expression.cpp  unary_expression.cpp
src/parser/expression/binary/: arithmetic_expression.cpp  binary_expression.cpp  compare_expression.cpp  equality_expression.cpp
src/parser/expression/literal/: any.cpp  bool.cpp  boolean.cpp  identifier.cpp  integer.cpp  literal.cpp  variant.cpp
src/parser/expression/unary/: unary_expression.cpp
src/scanner/: scanner.cpp
src/scanner/error/: scanner_error.cpp
src/storage/: runtime_environment.cpp
src/utils/: error.cpp  io_stream.cpp  string_utils.cpp
